--- a/blogpost.html
+++ b/blogpost.html
@@ -8,5 +8,7 @@
 <body>
     <h1 class="main-header">BLOG POST</h1>
     <h2 class="white">asdasdasd</h2>
+    <h2 class="no">qwert <span class="bum">bum</span></h2>
+    <h6>shaq</h6>
 </body>
 </html>
