--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="main-header">BLOG POST</h1>
-    <h2 class="white">asdasdasd</h2>
-    <h2 class="no">qwert <span class="bum">bum</span></h2>
-    <h6>shaq</h6>
+    <h1 class="main-header">TOP 3 CANDY</h1>
+    <h2 class="post1">Skittles </h2>
+    <h2 class="post2">Mike and Ike </h2>
+    <h2 class="post3">Jolly Ranchers </h2>
+  
 </body>
 </html>
