--- a/index2.html
+++ b/index2.html
@@ -11,14 +11,14 @@
  </div>
 
 
-<div class="post1">
-    <h2 class="skittles">Skittles </h2>
+<div>
+    <h2 class="post1">Skittles </h2>
     <h3>Taste the Rainbow</h3>
 </div>   
 
 
-<div>
-    <h2 class="post2">Mike and Ike </h2>
+<div class="post2">
+    <h2>Mike and Ike </h2>
     <h3>Fruity, Chewy Candy!</h3>
 </div>
    
