--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
 <div class="post1">
     <h2 class="skittles">Skittles </h2>
-    <h3>Taste the Rainbow</h3>
+    <h3 class="motto1">Taste the Rainbow</h3>
 </div>   
 
 
-<div>
-    <h2 class="post2">Mike and Ike </h2>
-    <h3>Fruity, Chewy Candy!</h3>
+<div class="post2">
+    <h2 class="mikeandike">Mike and Ike </h2>
+    <h3 class="motto2">Fruity, Chewy Candy!</h3>
 </div>
    
 
-<div>
-    <h2 class="post3">Jolly Ranchers </h2>
-    <h3>Whatever life throws at you, keep on sucking.</h3>
+<div class="post3">
+    <h2 class="jollyranchers">Jolly Ranchers </h2>
+    <h3 class="motto3">Whatever life throws at you, keep on sucking.</h3>
   
 </div>
     
