--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,200&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+
 </head>
 <body>
+
 <div>
     <h1 class="main-header">TOP 3 CANDY</h1>
  </div>
@@ -13,21 +22,23 @@
 
 <div class="post1">
     <h2 class="skittles">Skittles </h2>
-    <h3>Taste the Rainbow</h3>
+    <h3 class="motto1">Taste the Rainbow</h3>
+    <a href="https://mars-itr.com/our-brands/skittles" class="link1">Try Some Now</a>
 </div>   
 
 
-<div>
-    <h2 class="post2">Mike and Ike </h2>
-    <h3>Fruity, Chewy Candy!</h3>
+<div class="post2">
+    <h2 class="mikeandike">Mike and Ike </h2>
+    <h3 class="motto2">Fruity, Chewy Candy!</h3>
+    <a href="https://www.mikeandike.com/" class="link2">Try Some Now</a>
 </div>
    
 
-<div>
-    <h2 class="post3">Jolly Ranchers </h2>
-    <h3>Whatever life throws at you, keep on sucking.</h3>
-  
-</div>
+<div class="post3">
+    <h2 class="jollyranchers">Jolly Ranchers </h2>
+    <h3 class="motto3">Whatever life throws at you, keep on sucking.</h3>
+    <a href="https://www.hersheyland.com/jolly-rancher" class="link3">Try Some Now</a>
+  </div>
     
 </body>
 </html>
