changes at home

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="post1">
     <h2 class="skittles">Skittles </h2>
     <h3 class="motto1">Taste the Rainbow</h3>
-    <a href="https://mars-itr.com/our-brands/skittles" class="link1">Try Some Now</a>
+    <a href="https://mars-itr.com/our-brands/skittles" class="link1">Try Some Now!!!</a>
 </div>   
 
 
